# aimsir

./: .env  .gitignore  :w  Cargo.toml  Makefile  README.md  build.rs  compose.yml  diesel.sqlite  diesel.toml
benches/: peers_bench.rs
migrations/: 20240901094352_peers.sql
migrations/2024-08-04-125213_probes/: down.sql  up.sql
proto/: aimsir.proto
src/: client.rs  main.rs  manager.rs  peers.rs  server.rs
src/aimsir/: backend_manager.rs  client_manager.rs  constants.rs  mod.rs  peers_controller.rs  schema.rs  server_manager.rs
src/aimsir/model/: db.rs  mod.rs  mysql.rs  sqlite.rs
src/model/: mod.rs
