[package]
name = "aimsir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexbuffers = "2.0.0"
log = "0.4.21"
prost = "0.12.4"
serde = { version = "1.0.199", features = ["derive"] }
simple_logger = "4.3.3"
tokio = { version = "1.37.0", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
