[package]
name = "aimsir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aimsir-client"
path = "src/client.rs"

[[bin]]
name = "aimsir-server"
path = "src/server.rs"

[lib]
name = "aimsir"
path = "src/aimsir/mod.rs"

[dependencies]
async-stream = "0.3.5"
clap = "4.5.4"
diesel = { version = "2.2.2", features = ["mysql", "sqlite"] }
dotenv = "0.15.0"
flexbuffers = "2.0.0"
futures = "0.3.30"
log = "0.4.21"
prost = "0.12.4"
serde = { version = "1.0.199", features = ["derive"] }
simple_logger = "4.3.3"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
env_logger = "0.11.3"
tokio-stream = "0.1.15"

[[bench]]
name = "peers_bench"
harness = false

