[package]
name = "aimsir"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aimsir-client"
path = "src/client.rs"

[[bin]]
name = "aimsir-server"
path = "src/server.rs"

[lib]
name = "aimsir"
path = "src/aimsir/mod.rs"

[dependencies]
async-stream = "0.3.5"
axum = "0.7.5"
clap = { version = "4.5.4", features = ["env"] }
flexbuffers = "2.0.0"
futures = "0.3.30"
log = "0.4.21"
prost = "0.12.4"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.127"
simple_logger = "4.3.3"
sqlx = { version = "0.8.1", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
http-body-util = "0.1.2"
tokio-stream = "0.1.15"
tower = { version = "0.5.0", features = ["util", "tokio", "tokio-util"] }
tower-http = "0.5.2"
tower-layer = "0.3.3"

[[bench]]
name = "peers_bench"
harness = false

